- ADD: From the log dialog it's now possible to start
       the repository browser so it browses the
       selected revision. (Stefan)
- ADD: New button in the settings dialog to open
       the subversion config file with the default
       text editor. (Stefan)
- ADD: Implement Issue 87. TortoiseMerge shows now
       the filename and the revision in the viewtitle.
       TME gets this information from TSVN. (Stefan)
- ADD: The repository browser now allows the selection
       of more than one item. With this, the user can
       now select two files/folders from different
       urls (e.g. trunk and tags) and request a diff
       from them. (Stefan)
- ADD: Implement a "Delete" command in the context menu of 
       the commit dialog for unversioned files. (Stefan)
- CHG: The log message editboxes now do "soft-wrap",
       i.e. the logmessage is wrapped at the right
       end of the dialog box. (Stefan)
- BUG: Export always used HEAD, even if another revision
       was specified in the dialog. (Stefan)
- BUG: Showing diffs for changed files from the list in
       the log dialog was done with the wrong revisions. (Stefan)
- BUG: When adding files in a directory with svn:externals
       in it already controlled files got shown in
       the add dialog. (Stefan)
- BUG: Some patchfiles were not parsed correctly. (Stefan)
- BUG: Fixed a massive memory leak when showing logs,
       also reduced memory consumption when 
       committing. (Stefan)
- BUG: If the config file was messed up with TSVN just
       crashed instead of showing the error and exit. (Stefan)
- BUG: When sorting by a column in the commit dialog
       the selections (checkboxes) got lost. (Stefan)
- BUG: When the recursive overlay was activated, the
       overlays for folders weren't shown recursive if
       the explorer columns weren't sorted by name. (Stefan)

Version 0.26
- ADD: The columns in the progress and the commit dialog 
       are now sortable. (Stefan)