@@ -1,3 +1,6 @@
+- ADD: New option in the settings dialog to set the 
+       filetimes to the last commit time. This solves
+       issue 83. (Stefan)
 - ADD: From the log dialog it's now possible to start
        the repository browser so it browses the
        selected revision. (Stefan)
